--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,8 @@
 name = "sentire"
 version = "0.1.0"
 authors = ["nyfair <nyfair2012@gmail.com>"]
+
+[dependencies]
+libc = "*"
+sdl2 = "*"
+rust-ini = "*"
