--- a/sentire.ini
+++ b/sentire.ini
@@ -1,2 +1,3 @@
-[Image]
-extensions = bmp;bpg;dds;gif;hdp;hdr;ico;jif;jpe;jpeg;jpg;jxr;png;psd;targa;tga;tif;tiff;wdp;webp
+[format]
+image = bmp;bpg;dds;gif;hdp;hdr;ico;jif;jpe;jpeg;jpg;jxr;png;psd;targa;tga;tif;tiff;wdp;webp
+archive = zip;rar;7z
